--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,26 +4,32 @@ name: SonarCloud GitHub Actions with Gradle
 
 on:
   push:
-    branches: [ master ]
+    branches: 
+      - master         # Trigger on master branch
+      - harish-new     # Trigger on harish-new branch
   pull_request:
-    branches: '*'
+    branches: 
+      - '*'            # Trigger on any branch for pull requests
 
 jobs:
   build:
-    runs-on: ubuntu-lates
+    runs-on: ubuntu-latest
     name: Build
     steps:
       - uses: actions/checkout@v2
-      - name: Setup java
+      - name: Setup Java
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Gradle build
+      - name: Gradle Build
         uses: eskatos/gradle-command-action@v1
         with:
           arguments: --refresh-dependencies --stacktrace --scan clean build
-      - name: Sonarqube
+      - name: SonarQube
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew jacocoTestReport sonarqube --stacktrace -i
+        run: ./gradlew jacocoTestReport sonarqube \
+          -Dsonar.branch.name=${{ github.ref_name }} \
+          -Dsonar.scm.revision=${{ github.sha }} \
+          --stacktrace -i
